# minRL

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent_cli.py  chat.py  data_types.py  dataset.py  evaluate.py  grpo.py  list_z5_games.py  main.py  modal_train.py  play_game.py  pyproject.toml  server.py  test_agent.py  test_run.py  test_vllm.py  train.ipynb  train.py  visualize_algorithm.py  visualize_evals.py  visualize_results.py  vllm_client.py
.claude/: settings.local.json
minrl/: algorithms.py  constants.py  data_types.py  dataset.py  grpo.py  lora.py  metrics.py  modal_utils.py  packing.py  reinforce.py  rl_full.py  sft.py  trainer.py  utils.py
minrl/tasks/: __init__.py  connections.py  countdown.py  dataset.py  gsm8k.py  hanoi.py  writing.py  zork.py
notebooks/: loss_analysis.ipynb  zork_analysis.ipynb
tasks/: __init__.py  connections.py  countdown.py  dataset.py
tests/: conftest.py  test_assistant_mask.py  test_connections_reward.py  test_hanoi.py  test_lora.py  test_pack_bfd.py  test_process_batch.py  test_rollout.py  test_sft.py  test_update_policy.py  test_utils.py  test_zork.py
tests/tasks/: test_gsm8k.py  test_hanoi.py  test_zork.py
trl_vllm/: vllm_client.py  vllm_serve.py
viewer/: README.md  trajectory.css  trajectory.js  trajectory_template.html
vllm_inference/: client.py  server.py
