[project]
name = "minrl"
version = "0.1.0"
description = "Minimal RL for LLM implementations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5; sys_platform == 'linux'",
    "datasets>=3.5.0",
    "fire>=0.7.0",
    "flash-attn; sys_platform == 'linux'",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "modal>=1.0.4",
    "numpy>=2.2.5",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "ruff>=0.11.11",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
    "vllm>=0.8.4",
]


[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }]
torchvision = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
torchaudio = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
