[project]
name = "minrl"
version = "0.1.0"
description = "Minimal RL for LLM implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5; sys_platform == 'linux'",
    "datasets>=3.5.0",
    "fire>=0.7.0",
    "huggingface-hub[cli,hf-transfer]>=0.32.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "modal==1.1.4",
    "numpy>=2.2.5",
    "nvidia-ml-py>=13.580.82; sys_platform == 'linux'",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "ruff>=0.11.11",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "tensorboard==2.20.0",
    "tensorboardx==2.6.4",
    "tokenizers>=0.21.1",
    "torch",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
    "wandb>=0.20.1",
]

[dependency-groups]
training = ["vllm==0.10.2", "flash-attn; sys_platform == 'linux'"]
games = ["textworld", "pip>=25.1.1"]


[tool.uv]
default-groups = ["training", "games"]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]
torchvision = { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }
torchaudio = { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = ["slow: marks tests as slow (deselected by default)"]
